* Thu Sep 15 2011 Thunor <thunorsif@hotmail.com>
- Tidied-up all of the tree widget examples.

* Wed Sep 14 2011 Thunor <thunorsif@hotmail.com>
- Added examples/tree/tree_item_advanced.
- Added examples/tree/tree_input_advanced.
- Added examples/tree/tree_input_file_advanced.
  
* Tue Sep 13 2011 Thunor <thunorsif@hotmail.com>
- Fixed the tree widget's problematic pixmap rendering when including
  rows from multiple sources with different icon settings.
- Fixed (or completed) the tree widget's default icon feature.

* Mon Sep 12 2011 Thunor <thunorsif@hotmail.com>
- Added widget_tree.c/h.

* Thu Sep 8 2011 Thunor <thunorsif@hotmail.com>
- Fixed a bug in _variables_export that was making the list widget hang.
- Found a bug in fill_list_by_items that doesn't show the newly reloaded
  items on a refresh. Unfortunately this is the type of bug that some
  existing appications might've been designed around so I'm leaving it.
- Added examples/list/list_advanced.

* Wed Sep 7 2011 Thunor <thunorsif@hotmail.com>
- Fixed a bug in fill_clist_by_items whereby the item string was being
  corrupted by the linecutter function and wouldn't refresh. Item
  directive memory requires duplicating first prior to being chopped-up.
- Added examples/table/table_advanced.

* Tue Sep 6 2011 Thunor <thunorsif@hotmail.com>
- Added examples/edit/edit_advanced.

* Mon Sep 5 2011 Thunor <thunorsif@hotmail.com>
- Tweaked and shrunk the recently added checkbox_advanced example.
- Added examples/radiobutton/radiobutton_advanced.

* Sun Sep 4 2011 Thunor <thunorsif@hotmail.com>
- Updated Makefile.am for the new examples.

* Sat Sep 3 2011 Thunor <thunorsif@hotmail.com>
- Created new menu, menubar and menuitemseparator examples so that now
  all of the menu related examples are unique.

* Fri Sep 2 2011 Thunor <thunorsif@hotmail.com>
- Added examples/button/COPYING-elementary-icons.
- Added examples/button/button_image_position.
- Added examples/button/button_image_toggle.